--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,15 @@
-.nyc_output/
-coverage/
-node_modules/
-npm-debug.log
-package-lock.json
-test/*.log
+### react ###
+.DS_*
+*.log
+logs
+**/*.backup.*
+**/*.back.*
+
+node_modules
+bower_components
+
+*.sublime*
+
+psd
+thumb
+sketch
