--- a/client/package.json
+++ b/client/package.json
@@ -5,6 +5,8 @@
   "private": false,
   "main": "dist/index.js",
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.26",
+    "@fortawesome/free-solid-svg-icons": "^5.12.0",
     "@material-ui/core": "^4.3.2",
     "@material-ui/icons": "4.2.1",
     "chartist": "0.10.1",
@@ -19,6 +21,7 @@
     "react-bootstrap": "^1.0.0-beta.12",
     "react-chartist": "0.13.3",
     "react-dom": "16.9.0",
+    "react-fontawesome": "^1.7.1",
     "react-google-maps": "9.4.5",
     "react-modal": "^3.10.1",
     "react-router-dom": "5.0.1",
